--- a/Kaiserreich Korean Translation/localisation/KR_Sweden_Foreign_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Sweden_Foreign_l_english.yml
@@ -2,20 +2,20 @@
 
 ### Events ###
 
-swe.202.t:0 "Alliance proposal from Sweden"
-swe.202.d:0 "The government of Sweden has seemingly decided to end their neutrality line and have approached us to formally join our alliance. They could be a valuable asset, with their dominating presence in the Baltic and access to rich mines..."
-swe.202.a:0 "We will accept them into our faction."
-swe.202.b:0 "We are better off without Sweden!"
+swe.202.t:0 "스웨덴의 동맹 제안"
+swe.202.d:0 "스웨덴 정부가 그동안 고수하던 중립노선을 포기하고, 우리의 동맹에 가입하기를 원합니다. 스웨덴을 받아들이면 발틱해 지역에서 주도권을 가질 수 있고 스웨덴내 풍부한 광산에 접근할 수 있어, 스웨덴은 우리의 귀중한 자산이 될 수 있습니다..."
+swe.202.a:0 "우리 진영에 합류하는걸 수락한다."
+swe.202.b:0 "우리는 스웨덴이 없는게 더 낫다!"
 
-swe.203.t:0 "Alliance proposal from Sweden"
-swe.203.d:0 "The government of Sweden has seemingly decided to end their neutrality line and have approached us to formally join our alliance. They could be a valuable asset, with their dominating presence in the Baltic and access to rich mines..."
-swe.203.a:0 "We will accept them into our faction."
-swe.203.b:0 "We are better off without Sweden!"
+swe.203.t:0 "스웨덴의 동맹 제안"
+swe.203.d:0 "스웨덴 정부가 그동안 고수하던 중립노선을 포기하고, 우리의 동맹에 가입하기를 원합니다. 스웨덴을 받아들이면 발틱해 지역에서 주도권을 가질 수 있고 스웨덴내 풍부한 광산에 접근할 수 있어, 스웨덴은 우리의 귀중한 자산이 될 수 있습니다..."
+swe.203.a:0 "우리 진영에 합류하는걸 수락한다."
+swe.203.b:0 "우리는 스웨덴이 없는게 더 낫다!"
 
-swe.204.t:0 "Sweden wants to buy Åland"
-swe.204.d:0 "The Swedish government have sent feelers for a purchase of the Åsland isles. The isles, lost to them during a war of old with Russia, were claimed by us after the Weltkrieg. The population on the isles speak Swedish however, and consider themselves more Swedish than they do Finnish. With the money from the Sweden purchase we could enact further political reforms, and the people of Åland might be upset if we don't agree to sell, as might the Swedish government..."
-swe.204.a:0 "It's just a few islands. Sell them."
-swe.204.b:0 "We will not surrender an inch of Finnish soil!"
+swe.204.t:0 "스웨덴이 올란드 제도 매입을 원합니다"
+swe.204.d:0 "스웨덴 정부가 올란드 제도를 매입하고 싶다는 의향을 보냈습니다. 이 섬들은, 오래전 러시아와의 전쟁으로 상실한뒤, 세계 대전 이후로 우리에게 다시 반환됬었습니다. 섬에 거주하는 대부분은 스웨덴어권이며, 그들은 핀란드인이 되는 것보다 스웨덴인으로 살아가는 것이 더 나을 것입니다. 스웨덴으로 부터 매매 비용을 받으면 그 돈으로 정치 개혁에 사용할 수 있을 것입니다, 그리고 우리가 스웨덴의 제안을 거절한다면 올란드 제도의 사람들은 봉기를 일으킬 것입니다..."
+swe.204.a:0 "그저 작은 섬들 중 일부일뿐이다. 섬을 팔자."
+swe.204.b:0 "우리는 단 1센치의 영토조차 줄 수 없다!"
 
 swe.205.t:0 "Swedish Scandinavian Alliance proposal"
 swe.205.d:0 "The Swedish government have approached us with a radical idea, they are suggesting that we join them in a Scandinavian Pact, a military alliance to help safeguard our borders in an ever more dangerous world. To join the alliance means to commit to whatever wars other members might drag us into, but it also guarantees us protection not only from the rest of the world, but also from the other members. How should we reply?"
