9월 30일 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -8,7 +8,6 @@ TEX_military:0 "Building our Military"
 TEX_military_desc:0 "With the civil war upon us we need to build a new army that can lead America to her true glory and greatness."
 TEX_army:0 "The Patriotic American Army"
 TEX_army_desc:0 "With the civil war upon us we need a Patriotic American Army. One that will follow the true values of what it means to be an American and not the fat cats or the anarchists."
-TEX_pattons_mobility_plan:0 "Patton's Mobility Plan"
 TEX_pattons_mobility_plan_desc:0 "Of the various plans for the military, let us support General Patton's mobility plan. This is a plan that focus heavily on tanks and mechanised infantry."
 TEX_motorized_effort:0 "Motorised effort"
 TEX_motorized_effort_desc:0 "A key part of Patton's plan is motorised vehicles. By working closely with Henry Ford and other automotive leaders loyal to the true America, we can build the vehicles necessary to achieve victory."
@@ -24,7 +23,6 @@ TEX_conscription_law:0 "Conscription Law change"
 TEX_conscription_law_desc:0 "The strong military tradition of the south was not to be understated but the lack of manpower was an issue for the AUS. By reducing the age of conscription to 15 the American Union State was able to gain more manpower."
 TEX_army_nurse_corps:0 "Create the WACs"
 TEX_army_nurse_corps_desc:0 "The Women Army Corps has been proposed. The WACs as they are being called would take over support roles for the men allowing more men to go to the front. In particular a good number of women wish to enter the Nursing Corps to help save the lives of patriotic Americans."
-TEX_army_rangers:0 "The Army Ranger corps"
 TEX_army_rangers_desc:0 "Now that we have the plans finalised for the American Army it is time that we create the army ranger corps. The Army Ranger corps will function as the elite special forces of the American Army."
 
 ### Focuses - Navy ###
@@ -122,16 +120,24 @@ TEX_expand_the_minutemen:0 "Expand the Minutemen"
 TEX_expand_the_minutemen_desc:0 "The treachery of Pelley and the extremists have shown that the Minutemen need to be expanded both in manpower but also in their powers. While some may protest, this is in the best interest of all Americans. The people and Long shall be protected from every barbarous attack that can be launched against them. Some civil liberties will be sacrificed but it is necessary for the safety of all Americans."
 TEX_loyalty_to_long:0 "Loyalty to the Kingfish"
 TEX_loyalty_to_long_desc:0 "Loyalty to Huey Long must be stressed. Huey Long is the protector and saviour of America and he will keep the republic safe. We must make sure that no more snakes like Pelley sneak their way into power in America. No traitor shall ever threaten America again while the people are loyal to Huey Long. "
-TEX_I_am_for_the_poor_man:0 "I am for the Poor man"
-TEX_I_am_for_the_poor_man_desc:0 "I'm for the poor man — all poor men, black and white, they all gotta have a chance. They gotta have a home, a job, and a decent education for their children"
 TEX_perfect_dictatorship:0 "It Can Happen Here!"
 TEX_perfect_dictatorship_desc:0 "A man is not a dictator when he is given a commission from the people and carries it out. A perfect democracy can come close to looking like a dictatorship, a democracy in which the people are so satisfied they have no complaint."
 TEX_every_man_a_king:0 "Every Man a King!"
 TEX_every_man_a_king_desc:0 "Those are the things we propose to do. "Every man a king." Every man to eat when there is something to eat - all to wear something when there is something to wear. That makes us all sovereign."
-TEX_american_legion:0 "Jim Crow's America"
-TEX_american_legion_desc:0 "The Great Huey Long has been assassinated! In the chaos William Pelley has taken control and plans on bring a radical extremist vision of America to existence. With him in control, a strongly racists vision for America is being implemented in America."
-TEX_old_southern_money:0 "Corporate Ties"
-TEX_old_southern_money_desc:0 "To keep the new state safe we should work with the corporations and with their wealth we can help belly any chaos that will come about as we establish our new vision for America. It is no issue if they can profit off our vision for America."
+TEX_spirit_of_america:0 "Spirit of America"
+TEX_spirit_of_america_desc:0 ""
+TEX_fords_vision:0 "Fordism"
+TEX_fords_vision_desc:0 ""
+TEX_american_legion:0 "The American Legion"
+TEX_american_legion_desc:0 ""
+TEX_democratic_ideals:0 "Democratic Ideals"
+TEX_democratic_ideals_desc:0 ""
+TEX_the_american_dream:0 "The American Dream"
+TEX_the_american_dream_desc:0 ""
+TEX_american_exceptionalism:0 "American Exceptionalism"
+TEX_american_exceptionalism_desc:0 ""
+TEX_jim_crows_america:0 "Jim Crow's America"
+TEX_jim_crows_america_desc:0 "The Great Huey Long has been assassinated! In the chaos William Pelley has taken control and plans on bring a radical extremist vision of America to existence. With him in control, a strongly racists vision for America is being implemented in America."
 TEX_protecting_our_race:0 "Protecting our Race"
 TEX_protecting_our_race_desc:0 "Pelley and the Extremists have set up a clearly racist regime in America in the name of protecting the Purity of America. This racist policy will protect the whites in America from foreigners and undesirables. This shall help rejuvenate America and make her strong and prosperous once again. "
 TEX_democracy_for_whites:0 "Democracy for the White man"
@@ -203,7 +209,7 @@ TEX_panaman_intervention_desc:0 "Panama has always been closely aligned with Ame
 TEX_pax_american:0 "Pax Americana"
 TEX_pax_american_desc:0 "The American eagle once in despair of his place in the world now flies above proud and high. Where ever the eagle flies so does the protection of America. We have made not just America safer but the world safer. Now we shall enjoy the results of our Pax Americana."
 TEX_manifest_destiny:0 "Manifest Destiny"
-TEX_manifest_destiny_desc:0 "It was America's God given destiny to spread across the land from sea to shinning sea. However in the chaos of the civil war, many sought to leave America’s embrace. Now that the civil war is over, it is time to once again seek to obey God's will and spread across the continent."
+TEX_manifest_destiny_desc:0 "It was America's God given destiny to spread across the land from sea to shinning sea. However in the chaos of the civil war, many sought to leave America's embrace. Now that the civil war is over, it is time to once again seek to obey God's will and spread across the continent."
 TEX_reclaim_california:0 "Reclaiming the Pacific"
 TEX_reclaim_california_desc:0 "The corrupt men and women in the Pacific States thought only of their own wealth when the Civil War began. Now that we have won, it is time that we bring them back into America. Through diplomacy or force, the coast will be ours. "
 TEX_reclaim_new_england:0 "Reclaim New England"
@@ -219,10 +225,15 @@ TEX_american_school:0 "American School"
 TEX_american_school_desc:0 "Knowledge will keep America and her allies safe. We should help support the University of the Free World. Where the members of the League of American States will work together to improve our scientific understanding as well as help educate people in the dangers of syndicalism. "
 TEX_war_plan_red:0 "War Plan Red"
 TEX_war_plan_red_desc:0 "Our military Strategists have developed a plan for dealing with Canada. Long in the past we have had dreams of America including Canada. With the Civil war and the Canadians deciding to 'liberate' New England. They have shown them to be nothing but dangerous snakes. To protect America we must prepare to Invade Canada!"
-TEX_entente_embargo:0 "Embargo the Entente"
 TEX_entente_embargo_desc:0 "The economic might of America will be enough to bring the last remnants of the British Empire down to her knees. An embargo will destroy them and prepare us for the final killing blow against these snakes in the grass Canadians. "
 TEX_invade_canada:0 "Invade Canada"
 TEX_invade_canada_desc:0 "Now is the time to invade Canada! Time to once and for all pacify our neighbours to the north and make sure that the Canadians can never again try to go after America! God shall protect us as we help fight to make America safe from the dastardly Canadians!"
+TEX_side_with_germany:0 "Join Germany"
+TEX_side_with_germany_desc:0 ""
+TEX_german_trade:0 "German - American Trade"
+TEX_german_trade_desc:0 ""
+TEX_german_research:0 "German - American Research"
+TEX_german_research_desc:0 ""
 
 ### Ideas ###
 TEX_pattons_mobility_plan:0 "Patton's Mobility Plan"
@@ -270,6 +281,9 @@ TEX_kingfish_loyalty:0 "Loyalty to the Kingfish"
 TEX_divided_government:0 "Internal Conflicts"
 TEX_political_conflicts:0 "Political Conflicts"
 TEX_army_rangers:0 "Army Ranger Corps"
+TEX_fordism:0 "Fordism"
+TEX_america_legion:0 "The American Legion"
+TEX_conservative_democracy:0 "Conservative Democratic Ideals"
 
 ### Parties ###
 TEX_totalist_party:0 "미국 공산당"
@@ -321,10 +335,12 @@ CAN_CEDES_PAN:0 "Canada returns Panamá Canal"
 CAN_NO_CEDES_PAN:0 "Canada don't returns the Panamá Canal"
 TEX_entente_embargo:0 "The Union State Embargoes the Entente"
 TEX_treaty_refusal:0 "Refused our treaty"
+WON_CAW:0 "Won Central America Civil War"
 
 ### Flags ###
 long_arrests_pelley:0 "Huey Long arrests Pelley and his band of traitors"
-TEX_long_assassinated:0 "Huey Long has been assassinated and Pelley has taken power"
+TEX_pelley_takes_over:0 "Huey Long has been assassinated and Pelley has taken power"
+TEX_coalition:0 "Huey Long has been assassinated and a coalition including Ford, Lindbergh, Smith and Coughlin has formed to keep the country together!"
 
 ### Events ###
 unionstate.1.t:0 "Foundation of the Union State"
@@ -378,7 +394,8 @@ unionstate.11.b:0 "No. We need to maintain the party."
 unionstate.16.t:0 "The Long Night"
 unionstate.16.d:0 "The rift between Long and Pelley had been growing since before the Civil War and with the Civil War over their differences grew more and more. Pelley moved against him. In the dark of night in New Orleans, Pelley and his goons put into place their plot to assassinate Long and wrest power away from Long. Soon enough...."
 unionstate.16.a:0 "The Minutemen rush in and arrest Pelley and the Traitors!"
-unionstate.16.b:0 "The Minutemen rush and find Long dead!"
+unionstate.16.b:0 "Long is found dead and Pelley takes power!"
+unionstate.16.c:0 "Long is found dead and Patton takes charge!"
 
 
 
@@ -509,8 +526,14 @@ unionstate.101.a:0 "Lindbergh wins with Smith's support"
 unionstate.101.b:0 "Smith wins with Father Caughlin's support"
 unionstate.101.c:0 "Father Caughlin wins with Lindbergh's support"
 
+unionstate.120.t:0 "The New American"
+unionstate.120.d:0 "The Death of Huey Long has prompted a coalition government to be formed of the top leading figures of the government. The extremists such as Pelley have been purged for their role in the coup. American Democracy has been kept and made strong by the nationalistic rhetoric and the ideals of Henry Ford."
+unionstate.120.a:0 "God Bless America"
+
+
+
 unionstate.130.t:0 "The New America"
-unionstate.130.d:0 "The death of Huey Long swept the American Legion into power lead by William Dudley Pelley. This allowed the extremists within the American First to reshape America to their own desires. And today a new dawn has risen in America. Once located to mainly the south, Jim Crow laws now are the law of the land throughout the country. Christianity has been reinforced as the religion of the people and the country."
+unionstate.130.d:0 "The death of Huey Long swept into power William Dudley Pelley. This allowed the extremists within the American First to reshape America to their own desires. And today a new dawn has risen in America. Once located to mainly the south, Jim Crow laws now are the law of the land throughout the country. Christianity has been reinforced as the religion of the people and the country."
 unionstate.130.a:0 "God Bless America!"
 unionstate.131.t:0 "Vice President elections"
 unionstate.131.d:0 "Democracy must remain in America, at least for the right kind of Americans. While we shall make sure that all factions remain loyal to the values of our new America. Elections have been called to keep the people happy. Various factions are competing for influence and power. The question though is whom shall win the elections?"
