9월 30일 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
@@ -1,5 +1,7 @@
 ﻿l_english:
 
+l_english:
+
 ### Opinions ###
 
 support_sop:0 "Supporting SOP Nationalists"
@@ -398,12 +400,12 @@ balticduchy.202.a:0 "Fine deal."
 balticduchy.202.b:0 "No more deal with Germans!"
 
 balticduchy.203.t:0 "Latvian resistance"
-balticduchy.203.d:0 "Latvia has refused to admit our rulership. What shall we do?"
+balticduchy.203.d:0 "Latvia has refused to admit our leadership. What shall we do?"
 balticduchy.203.a:0 "We have no other option but war"
 balticduchy.203.b:0 "Leave them be!"
 
 balticduchy.204.t:0 "Estonian resistance"
-balticduchy.204.d:0 "Estonia has refused to admit our rulership. What shall we do?"
+balticduchy.204.d:0 "Estonia has refused to admit our leadership. What shall we do?"
 balticduchy.204.a:0 "We have no other option but war"
 balticduchy.204.b:0 "Leave them be!"
 
@@ -495,16 +497,16 @@ BAT_Ger_Livland1_desc:0 "Livland, referred to by the locals as Latgale, is the h
 BAT_Ger_Estland1:0 "Colonize Estland"
 BAT_Ger_Estland1_desc:0 "Estland, or Estonia according to the locals, is the final step towards the full Germanisation of our Duchy. We already have experience in strategic immigrant settling and fighting local language usage, so this will be an easy task."
 
-BAT_Ger_Kurland2:0 "Deutsche Kurland"
+BAT_Ger_Kurland2:0 "Deutsch-Kurland"
 BAT_Ger_Kurland2_desc:0 "The Germanisation project has yielded exactly the results we needed. The percentage of Germans in Kurland is growing every day, and despite native resistance, the ideal of Drang nach Osten grows stronger every day."
 
-BAT_Ger_Livland2:0 "Deutsche Livland"
+BAT_Ger_Livland2:0 "Deutsch-Livland"
 BAT_Ger_Livland2_desc:0 "The Germanisation project has yielded exactly the results we needed. The percentage of Germans in Livland is growing every day, and despite native resistance, the ideal of Drang nach Osten grows stronger every day."
 
-BAT_Ger_Estland2:0 "Deutsche Estland"
+BAT_Ger_Estland2:0 "Deutsch-Estland"
 BAT_Ger_Estland2_desc:0 "The Germanisation project has yielded exactly the results we needed. The percentage of Germans in Estland is growing every day, and despite native resistance, the ideal of Drang nach Osten grows stronger every day."
 
-BAT_Ger_Baltic:0 "Deutsche Baltika"
+BAT_Ger_Baltic:0 "Deutsch-Baltika"
 BAT_Ger_Baltic_desc:0 "The process of Germanisation has been successful. The Baltic Germans are now the dominant nation in population as well as in politics. We are finally eligible to apply to become an Imperial State, if that's is what we want, of course."
 
 BAT_Ger_Integration:0 "Integration"
@@ -604,7 +606,7 @@ BAT_ERP_End:0 "Recovery from Crisis"
 BAT_ERP_End_desc:0 "Hurrah! Under our wise rule, the Duchy has survived this crisis. It seems, at least for us, that the worst of the Black Monday is over. Prosperity is once more the law of the land, and shall stay so!"
 
 BAT_Army_Start:0 "Baltic Army"
-BAT_Army_Start_desc:0 "Officially, we do have an army. But it actually consists of nothing more than a bunch of young boys with rifles. Military doctrine is the first thing we need to modernize. Decades have passed since the end of the Weltkrieg and our current doctrine is now clearly outdated."
+BAT_Army_Start_desc:0 "Officially, we do have an army. But it actually consists of nothing more than a bunch of young boys with rifles. Military doctrine is the first thing we need to modernise. Decades have passed since the end of the Weltkrieg and our current doctrine is now clearly outdated."
 
 BAT_Army_Cons:0 "Conscription Question"
 BAT_Army_Cons_desc:0 "Native Balts, the majority of our country's population, are not currently allowed to serve in the army. Should we finally lift some of these restrictions, or should we keep the army the sole affair of the Germans?"
