9월 30일 업데이트 적용

--- a/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
@@ -148,6 +148,7 @@ halifax_shipyard:0 "Halifax Shipyard"
 canadian_vickers:0 "Canadian Vickers"
 orenda_engines:0 "Orenda Engines"
 raac_canada:0 "Royal Atlantic Aeronautics"
+
 ### Combined Syndicates of America ###
 kr_us_steel:0 "US Steel"
 kr_att:0 "AT&T"
@@ -204,6 +205,7 @@ disa:0 "Dansk Industri Syndikat"
 forenede_automobilfabriker:0 "De Forenede Automobilfabriker"
 frichs_maskinfabrik:0 "Frichs Maskinfabrik"
 skandinavisk_aero:0 "Skandinavisk Aero Industri"
+denmark_sas_company:0 "스칸디나비아 에어라인"
 odense_staalskibsverft:0 "Odense Staalskibsværft"
 burmeister_wain:0 "Burmeister & Wain"
 aalborg_verft:0 "Aalborg Værft"
@@ -222,14 +224,14 @@ ethiopian_electric_power:0 "Ethiopian Electric Power Corporation"
 university_college_addis_ababa:0 "University College of Addis Ababa"
 addis_ababa_arsenal:0 "Addis Ababa Arsenal"
 eth_state_artillery_factory:0 "State Artillery Factory"
-eth_dpaeb:0 "Deutsche Pan-Afrikanisches EisenBahn"
+ethiopia_railway_company:0 "에티오피아 황실 철도 회사"
 addis_ababa_aircraft:0 "Addis Ababa Aircraft Workshop"
 massawa_naval_yard:0 "Massawa Naval Yard"
 mogadishu_naval_yard:0 "Mogadishu Naval Yard"
 
 ### Fengtian ###
 mantetsu_industrial_subsiduaries:0 "Mantetsu Industrial Subsiduaries"
-mukden_arsenal:0 "Mukden Arsenal"
+shenyang_arsenal:0 "Shenyang Arsenal"
 minsheng_automobile_company:0 "Minsheng Automobile Company"
 mitsubishi_heavy_industries:0 "Mitsubishi Heavy Industries"
 manchuria_airplane_company:0 "Dongbei Airplane Manufacturing Company"
@@ -391,6 +393,21 @@ dina:0 "DINA"
 tnca:0 "TNCA"
 talleres_navales_golfo:0 "Talleres Navales del Golfo"
 
+### Mittelafrika ###
+otavi_minen_eisenbahn:0 "Otavi Minen- und Eisenbahn-Gesellschaft"
+union_miniere:0 "Union Minière"
+marinenachrichtendienst:0 "Marinenachrichtendienst"
+amani_research_institute:0 "Amani Research Institute"
+mauser_maf:0 "Mauser Mittelafrika"
+bundesarsenal_dar_es_salaam:0 "Bundesarsenal Dar-es-Salaam"
+daimler_benz_afrika:0 "Daimler-Benz Afrika"
+maf_dpaeb:0 "Deutsche Pan-Afrikanisches EisenBahn"
+rumpler_afrika:0 "Rumpler Flugzeugwerke Mittelafrika"
+focke_wulf_afrika:0 "Focke Wulf Afrika"
+goring_flugzeugwerke:0 "Von Göring Flugzeugwerke"
+maf_kaiserliche_werft:0 "Kaiserliche Werft Dar-es-Salaam"
+deutsche_ost_afrika_linie:0 "Deutsche Ost-Afrika Linie"
+
 ### Nationalist France ###
 schneider:0 "Schneider"
 machines_bull:0 "Compagnie des Machines Bull"
@@ -453,6 +470,7 @@ norges_statsbaner:0 "Norges Statsbaner"
 kjeller_flyfabrikk:0 "Kjeller Flyfabrikk"
 marinens_flyvebaat:0 "Marinens Flyvebaatfabrikk"
 det_norske_luftfartselskap:0 "Det Norske Luftfartselskap"
+norway_sas_company:0 "Scandinavian Airlines"
 marinens_hovedverft:0 "Marinens Hovedverft"
 nylands_verksted:0 "Nylands Verksted"
 
@@ -621,6 +639,34 @@ baltiysky_verfi:0 "Baltiysky Verfi"
 admiralteiskie_verfi:0 "Admiralteiskie Verfi"
 rubin:0 "Rubin"
 
+### Scandinavia ###
+sca_atlas:0 "Atlas Maskinfabrik"
+sca_norsk_hydro:0 "Norsk Hydro"
+sca_ericsson:0 "Ericsson"
+sca_novo_nordisk:0 "Novo Nordisk"
+sca_aga:0 "AGA"
+sca_carl_gustavs_stad:0 "Carl Gustafs Stads Gevärsfaktori"
+sca_disa:0 "Dansk Industri Syndikat"
+sca_bofors:0 "Bofors"
+sca_kongsberg:0 "Kongsberg"
+sca_scania_vabis:0 "Scania-Vabis"
+sca_volvo:0 "Volvo"
+sca_landsverk:0 "Landsverk"
+sca_svenska_aeroplan:0 "SAAB"
+sca_kjeller:0 "Kjeller Flyfabrikk"
+sca_sas_company:0 "Scandinavian Airlines"
+sca_kockums:0 "Kockums"
+sca_odense_staalskib:0 "Odense Staalskibsværft"
+sca_marinens_hovedverft:0 "Marinens Hovedverft"
+
+### Schleswig-Holstein ###
+universitat_kiel:0 "Universität zu Kiel"
+berlin_lubecker:0 "Berlin-Lübecker Maschinenfabrik"
+metallwarenfabrik_spreewerk:0 "Metallwarenfabrik Spreewerk"
+sch_deutsche_werke:0 "Deutsche Werke"
+sachsenberg_leichtbau:0 "Sachsenberg-Leichtbau"
+sch_germaniawerft:0 "Germaniawerft"
+
 ### Serbia ###
 sartid:0 "SARTID"
 univerzitet_beogradu:0 "Univerzitet u Beogradu"
@@ -666,6 +712,16 @@ officine_ferroviarie_meridionali:0 "Officine Ferroviarie Meridionali"
 piaggio:0 "Piaggio"
 cansa:0 "CANSA"
 navalmeccanica:0 "Navalmeccanica"
+
+### Somalia ###
+korna_isletmeleri:0 "Korna İşletmeleri"
+mogadishu_university:0 "Mogadishu University"
+warsangali_arsenal:0 "Royal Armory of Warsangali"
+majeerteen_armory:0 "Majeerteen Armory"
+somalische_eisenbahn:0 "Königliche Somalische Eisenbahngesellschaft"
+som_aircraft_factory:0 "State Aircraft Factory"
+hoboyo_naval_yard:0 "Hoboyo Dockyard"
+mogadishu_naval_yard:0 "Mogadishu Naval Yard"
 
 ### South Africa ###
 south_african_steel_and_iron:0 "South African Iron and Steel Industrial Corp."
@@ -757,6 +813,7 @@ tidaholms_bruk:0 "Tidaholms Bruk"
 hagglunds:0 "Hägglund & Söner"
 svenska_aeroplan:0 "Svenska Aeroplan AB"
 thulinverken:0 "AB Thulinverken"
+sweden_sas_company:0 "Scandinavian Airlines"
 gotaverken:0 "Götaverken"
 kockums:0 "Kockums"
 lindholmen:0 "Lindholmen"
@@ -792,6 +849,32 @@ anatra:0 "Anatra"
 kr_beriev:0 "ChARZ"
 black_sea_shipyard:0 "Lazarevskoe Admiralteystvo"
 
+### United Kingdom ###
+UK_imperial_chemical_industries:0 "International Chemical Industries"
+UK_english_electric:0 "English Electric"
+UK_marconi:0 "Marconi Wireless"
+UK_bsa:0 "Birmingham Small Arms Company"
+UK_sterling:0 "Sterling's Hammers"
+UK_rsaf:0 "Royal Small Arms Factory Enfield"
+UK_webley_scott:0 "Webley & Scott"
+royal_arsenal:0 "Royal Arsenal"
+UK_austin:0 "Austin Motor Company"
+UK_morris:0 "Morris Motors"
+UK_aec:0 "Associated Equipment Company"
+UK_rolls_royce:0 "Rolls Royce's Automobiles"
+UK_vauxhall:0 "Vauxhall"
+UK_vickers_armstrong:0 "Vickers-Armstrong"
+UK_blackburn:0 "Blackburn Aircraft"
+UK_baulton_paul:0 "Boulton Paul Aircraft"
+UK_handley_page:0 "Handley Page Aircraft"
+UK_hawker:0 "Hawker"
+UK_short:0 "Shorts"
+UK_supermarine:0 "Supermarine"
+UK_westland:0 "Westland"
+UK_swan_hunter:0 "Swan Hunter"
+UK_john_brown_company:0 "John Brown & Company"
+UK_cammell_laird:0 "Cammell Laird"
+UK_raac:0 "Royal Atlantic Aeronautics"
 ### Union of Britain ###
 imperial_chemical_industries:0 "International Chemical Industries"
 english_electric:0 "English Electric"
@@ -903,7 +986,7 @@ daimler_benz:0 "Daimler-Benz"
 vomag:0 "Vomag"
 maybach:0 "Maybach"
 albatros:0 "Albatros"
-fokker_ger: "Fokker"
+fokker_ger:0 "Fokker"
 dornier:0 "Dornier"
 fieseler_company:0 "Fieseler"
 focke_wulf:0 "Focke Wulf"
@@ -942,30 +1025,33 @@ brossel:0 "Brossel"
 miesse:0 "Miesse"
 cockerill_scheepwerfen:0 "Cockerill Scheepwerfen"
 
-### Wallonia ###
-cockerill_WLL:0 "Cockerill"
-acec_WLL:0 "Ateliers de Constructions Électriques de Charleroi"
-societe_belge_radio_WLL:0 "Société Belge Radio-électrique"
-fabrique_nationale_WLL:0 "Fabrique Nationale"
-fonderie_royale_canons_WLL:0 "Fonderie Royale de Canons"
-imperia_WLL:0 "Imperia Automobiles"
-familleureux_WLL:1 "Familleureux"
+### Flanders-Wallonia ###
+cockerill:0 "Cockerill"
+                                                                
+societe_belge_radio:0 "Société Belge Radio-électrique"
+solvay:0 "Solvay"
+fabrique_nationale:0 "Fabrique Nationale"
+fonderie_royale_canons:0 "Fonderie Royale de Canons"
+imperia:0 "Imperia Automobiles"
+minerva:0 "Minerva"
+familleureux:1 "Familleureux"
 la_brugeoise:0 "La Brugeoise"
-avions_fairey_WLL:0 "Avions Fairey"
-sabca_WLL:0 "SABCA"
+renard:0 "Renard"
+avions_fairey:0 "Avions Fairey"
+sabca:0 "SABCA"
 
-### Flanders ###
-solvay_FLN:0 "Solvay"
-renard_FLN:0 "Renard"
-stampe_vertongen_FLN:0 "Stampe et Vertongen"
-boel_zonen_FLN:0 "J. Boel & Zonen"
-mecar_FLN:0 "Mecar"
-minerva_FLN:0 "Minerva"
-forges_de_zeebruges_FLN:0 "Zeebrugge Smederijen"
-brossel_FLN:0 "Brossel"
-miesse_FLN:0 "Miesse"
-cockerill_scheepwerfen_FLN:0 "Cockerill Scheepwerfen"
-la_brugeoise_FLN:0 "La Brugeoise"
+                
+                     
+                     
+stampe_vertongen:0 "Stampe et Vertongen"
+boel_zonen:0 "J. Boel & Zonen"
+                   
+                       
+                                                
+                       
+                     
+                                                     
+                                 
 
 ### Serbia ###
 sartid:0 "SARTID"
