--- a/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
@@ -562,7 +562,7 @@ amcivwar.185.a:0 "축하할 시간이다!"
 amcivwar.186.t:0 "혼돈의 미국"
 amcivwar.186.d:0 "라이베리아는 1822 년에 자유 노예를 식민지로 설립 한 이래 미국의 경제적이고 효과적인 정치적 지배하에 있습니다. 이 지배력은 라이베리아를 유럽 식민지 세력으로부터 보호하는 데에도 도움이 되었습니다. 그러나 이제는 라이벌 정치 세력이 대통령직에 입찰하면서 미국은 혼란에 빠져 있습니다. 갈등은 이제 전쟁의 시점까지 깊어졌습니다. 그들은 더 이상 보호를 할 의지가 없습니다. 이제 우리는 어떻게 살아야할지 결정해야합니다."
 amcivwar.186.a:0 "We will seek protection from National Franch"
-amcivwar.186.b:0 "독일은 지금 우리를 보호할 수 있는 유일한 강자 ."
+amcivwar.186.b:0 "독일은 지금 우리를 보호할 수 있는 유일한 강자 이다 ."
 amcivwar.186.c:0 "Lapdogs no longer - We can protect ourselves!"
 amcivwar.186.e:0 "우리는 반역자가 아니다-미국에게 충성한다"
 amcivwar.187.t:0 "라이베리아가 보호를 요청하다"
