--- a/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
@@ -949,7 +949,7 @@ amcivwar.304.t:0 "미국 내전의 종식"
 amcivwar.304.d:0 "좋은 결과든 나쁜 결과든 간에, 미국 내전은 이제 끝났습니다. 작전 참모는 그들이 분쟁의 과정에서 현대전의 본질에 관한 수많은 가치있는 교훈을 배웠다고 보고했습니다."
 amcivwar.304.a:0 "좋군!"
 amcivwar.305.t:0 "디트로이트 점령"
-amcivwar.305.d:0 "우리는 적들로부터 디트로이트를 탈환했습니다. 우리는 도시의 일부를 되찾을 수 있는 기회가 있습니다. 또한 우리는 일부 공장들의 일부를 빼앗을 수 있습니다"
+amcivwar.305.d:0 "우리는 적들로부터 디트로이트를 탈환했습니다. 우리는 도시의 일부를 되찾을 수 있는 기회가 있습니다. 또한, 우리는 일부 공장들 중 일부를 탈환할 수 있습니다"
 amcivwar.305.a:0 "기회를 잡아라"
 amcivwar.305.b:0 "우리는 미국으로부터 훔치지 않는다"
 amcivwar.306.t:0 "디트로이트 수복"
